--- a/dynamic-codepipeline-creation.yaml
+++ b/dynamic-codepipeline-creation.yaml
@@ -127,7 +127,8 @@ Resources:
                   - '-'
                   - - !Sub ${RequesterName}
                     - !Sub ${ApplicationName}  
-                Capabilities: CAPABILITY_AUTO_EXPAND
+                Capabilities:
+                  - CAPABILITY_IAM                
                 RoleArn: arn:aws:iam::464260423044:role/cloudformation_s3_role
                 TemplatePath: SourceArtifact::template-export.yaml
                 TemplateConfiguration: SourceArtifact::test-configuration.json
