--- a/dynamic-codepipeline-creation.yaml
+++ b/dynamic-codepipeline-creation.yaml
@@ -127,9 +127,10 @@ Resources:
                   - '-'
                   - - !Sub ${RequesterName}
                     - !Sub ${ApplicationName}  
-                Capabilities:
+                Capabilities.member.N:
                   - CAPABILITY_IAM
-                  -  CAPABILITY_AUTO_EXPAND
+                  - CAPABILITY_NAMED_IAM
+                  - CAPABILITY_AUTO_EXPAND
                 RoleArn: arn:aws:iam::464260423044:role/cloudformation_s3_role
                 TemplatePath: SourceArtifact::template-export.yaml
                 TemplateConfiguration: SourceArtifact::test-configuration.json
